fix: Fix align-items center problem

--- a/css/main.css
+++ b/css/main.css
@@ -341,44 +341,45 @@ header .search .autocompletes li{
 }
 
 /* NAVIGATION */
-nav{
+nav {
+  --nav-height: 52px;
+  border-bottom: 1px solid var(--color-border);
   background-color: rgba(255, 255, 255, .7);
   backdrop-filter: blur(20px);
-  border-bottom: 1px solid var(--color-border);
   position: sticky;
   top: 0;
   z-index: 8;
 }
-nav .inner{
+nav .inner {
   max-width: 1000px;
-  height: 52px;
+  height: var(--nav-height);
   display: flex;
   align-items: center;
 }
-nav h1{
+nav h1 {
   flex-grow: 1;
   font-size: 22px;
   font-weight: 500;
 }
-nav .menu{
+nav .menu {
   display: flex;
   gap: 12px;
   margin-right: 18px;
 }
-nav .menu li a{
+nav .menu li a {
   display: block;
   padding: 6px;
   font-size: 11px;
 }
-nav .menu li:hover a{
-  color: var(--color-link)
-}
-nav .menu li.active a{
+nav .menu li.active a {
   opacity: .5;
   cursor: default;
 }
-nav .menu li.active:hover a{
-  color: var(--color-font)
+nav .menu li:hover a {
+  color: var(--color-link);
+}
+nav .menu li.active:hover a {
+  color: var(--color-font);
 }
 
 /* HERO */
